--- a/examples/2_ddb_usage.ipynb
+++ b/examples/2_ddb_usage.ipynb
@@ -16,7 +16,7 @@
     "import abipy\n",
     "from abipy.dfpt.ddb import DdbFile\n",
     "\n",
-    "from abipy_panel.ddb import Summary, PHBandsPanel"
+    "from abipy_panel.ddb import Summary, PHBandsPanel, BECPanel, Eps0Panel, VSoundPanel"
    ]
   },
   {
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = abipy.__path__[0] + \"/data/refs/alas_phonons/trf2_3_DDB\""
+    "filename = abipy.__path__[0] + \"/data/refs/alas_phonons/trf2_3_DDB\"\n",
+    "ddb = DdbFile.from_file(filename)"
    ]
   },
   {
@@ -42,24 +43,8 @@
    "outputs": [],
    "source": [
     "out = Summary()\n",
-    "out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ddb = DdbFile.from_file(filename)\n",
+    "display(out)\n",
     "out.update(ddb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PH-bands options"
    ]
   },
   {
@@ -70,9 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "ddb = DdbFile.from_file(filename)\n",
-    "panel = PHBandsPanel(ddb)\n",
-    "panel"
+    "PHBandsPanel(ddb)"
    ]
   },
   {
@@ -80,7 +63,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "BECPanel(ddb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "Eps0Panel(ddb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VSoundPanel(ddb)"
+   ]
   }
  ],
  "metadata": {
